--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "exampledb",
+    "password": "root",
+    "database": "food_db",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "mysql", 
+    "port": "3308"
   },
   "test": {
     "username": "root",
